--- a/backend/package.json
+++ b/backend/package.json
@@ -21,5 +21,8 @@
     "express": "^5.1.0",
     "moodie": "file:..",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
