--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.11",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "@vitejs/plugin-react": "^4.x"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
