Arreglo de errores

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.11",
-    "zustand": "^5.0.6",
-    "@vitejs/plugin-react": "^4.x"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
