--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@getbrevo/brevo": "^2.5.0",
     "@google/genai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.10.0",
@@ -23,7 +24,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
     "moodie": "file:..",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "resend": "^4.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
