--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "moodie": "file:..",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.7.0",
     "zustand": "^5.0.6"
   },
